element dependency, group logic updates